--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/crawl",
-      "schedule": "0 21 * * *"
-    },
-    {
-      "path": "/api/cron/expire",
-      "schedule": "10 21 * * *"
-    }
-  ]
+  "framework": "nextjs"
 }
